change about sec

--- a/index_sample_1_fixed.html
+++ b/index_sample_1_fixed.html
@@ -256,22 +256,14 @@
     </div>
   </div>
 
-  <div class="about-section home-section">
-    <h2>About Us</h2>
-    <p id="typewriter-text">
-
-      The pace of economic change has accelerated dramatically. Digitalisation, geopolitics, and demographic shifts are
-      reshaping industries, and both start-ups and established corporations must innovate to survive. Yet innovation
-      requires more than bright ideas; it demands structured execution, access to capital, strategic guidance, and
-      operational excellence.<br><br>
-      Hatchlab Innovations has been built as an integrated platform to address these needs through Enterprise Creation
-      as a Service (ECaaS). By combining a start-up studio, a diversified investment arm, and a modern consultancy under
-      one roof, Hatchlab enables entrepreneurs, executives, and investors to create, finance, and scale ventures with
-      confidence.
-      <a href="#" class="read-more">Read More</a>
-    </p>
-  </div>
-
+<div class="about-section home-section">
+  <h2>About Us</h2>
+  <p>
+    The pace of economic change has accelerated dramatically. Digitalisation, geopolitics, and demographic shifts are reshaping industries, and both start-ups and established corporations must innovate to survive. Yet innovation requires more than bright ideas; it demands structured execution, access to capital, strategic guidance, and operational excellence.<br><br>
+    Hatchlab Innovations has been built as an integrated platform to address these needs through Enterprise Creation as a Service (ECaaS). By combining a start-up studio, a diversified investment arm, and a modern consultancy under one roof, Hatchlab enables entrepreneurs, executives, and investors to create, finance, and scale ventures with confidence.
+    <a href="#" class="read-more">Read More</a>
+  </p>
+</div>
 
 
 
