--- a/index_sample_1_fixed.html
+++ b/index_sample_1_fixed.html
@@ -178,7 +178,7 @@
     </div>
     <nav class="header-nav">
       <a href="https://www.hatchlabinnovations.com/">About</a>
-      <a href="https://www.hatchlabinnovations.com/">Service</a>
+      <a href="services.html">Service</a>
       <a href="careers_page.html">Career</a>
       <a href="https://www.hatchlabinnovations.com/contact">Contact</a>
     </nav>
