Services at Hactchlab iamge added

--- a/services.html
+++ b/services.html
@@ -45,7 +45,7 @@
 
         <section class="full-image-section">
             <div class="image-container">
-                <img src="img1.jpg" alt="Service Image">
+                <img src="images/img1.jpg" alt="Service Image">
             <div class="overlay-boxone">
             <h2>Hatchlab Inception</h2>
             <p>
@@ -57,7 +57,7 @@
 
                 <section class="full-image-section">
             <div class="image-container">
-                <img src="img1.jpg" alt="Service Image">
+                <img src="images/img1.jpg" alt="Service Image">
                 <div class="overlay-boxtwo">
             <h2>Hatchlab Ventures</h2>
             <p>
@@ -67,7 +67,7 @@ Hatchlab Ventures is driven by the mission to empower changemakers with purposef
         </section>
                 <section class="full-image-section">
             <div class="image-container">
-                <img src="img1.jpg" alt="Service Image">
+                <img src="images/img1.jpg" alt="Service Image">
                 <div class="overlay-boxone">
             <h2>Hatchlab One</h2>
             <p>
