About Us change

--- a/index_sample_1_fixed.html
+++ b/index_sample_1_fixed.html
@@ -177,7 +177,7 @@
       <span class="brand-name">HatchLabs Innovations</span>
     </div>
     <nav class="header-nav">
-      <a href="https://www.hatchlabinnovations.com/">About</a>
+      <a href="about.html">About</a>
       <a href="services.html">Service</a>
       <a href="careers_page.html">Career</a>
       <a href="https://www.hatchlabinnovations.com/contact">Contact</a>
