--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
     .header-nav {
         text-align: center;
     }
-    .header-logo {
+    .header-log{
         display: flex;
         align-items: center;
         gap: 15px;
