--- a/index_sample_1_fixed.html
+++ b/index_sample_1_fixed.html
@@ -171,7 +171,7 @@
   <!-- Header -->
   <header class="main-header">
     <div class="header-logo">
-      <a href="https://www.hatchlabinnovations.com/">
+      <a href="index_sample_1_fixed.html">
         <img src="images/logo.png" alt="Logo" />
       </a>
       <span class="brand-name">HatchLabs Innovations</span>
@@ -180,7 +180,7 @@
       <a href="about.html">About</a>
       <a href="services.html">Service</a>
       <a href="careers_page.html">Career</a>
-      <a href="https://www.hatchlabinnovations.com/contact">Contact</a>
+      <a href="contactus.html">Contact</a>
     </nav>
   </header>
 
