shinny style on the social icon

--- a/index_sample_1_fixed.html
+++ b/index_sample_1_fixed.html
@@ -255,7 +255,7 @@
       </div>
     </div>
   </div>
-
+<!--SMRITILATA PART-->
   <div class="about-section home-section">
     <h2>About Us</h2>
     <p>
