footer added to all html pages

--- a/about.html
+++ b/about.html
@@ -181,34 +181,59 @@
     </p>
 </div>
 
-<footer class="footer footer-section">
-    <div class="footer-left-content">
-        <div class="footer-logo-container">
-            <div class="logo-box-footer">
-                <img src="images/logo.png" alt="Logo"> 
+<footer class="footer-section">
+        <!-- Main horizontal row -->
+        <div class="footer-content">
+            <!-- Column 1: Logo + Copyright -->
+            <div class="footer-column">
+                <div class="footer-logo">
+                    <img src="images/logo.png" alt="HatchLab Logo">
+                </div>
+                <p class="footer-meta">© 2025 HatchLab Innovations Pvt. Ltd.<br>All rights reserved.</p>
+            </div>
+
+            <!-- Column 2: Links -->
+            <div class="footer-column">
+                <nav class="footer-links">
+                    <a href="https://www.hatchlabinnovations.com/career">Career</a>
+                    <a href="https://www.hatchlabinnovations.com/contact">Contact</a>
+                </nav>
+            </div>
+
+            <!-- Column 3: Contact Info -->
+            <div class="footer-column">
+                <div class="footer-contact">
+                    <a href="tel:+918276057111">+91 8276057111</a>
+                    <a href="mailto:info@hatchlabinnovations.com">info@hatchlabinnovations.com</a>
+                    <a href="mailto:admin@hatchlabinnovations.com">admin@hatchlabinnovations.com</a>
+                </div>
+            </div>
+
+            <!-- Column 4: Email Form -->
+            <div class="footer-column">
+                <form class="footer-form" action="#" onsubmit="return false;">
+                    <input type="email" placeholder="Enter your email" required>
+                    <button type="submit">Contact Us</button>
+                </form>
             </div>
         </div>
-        <p class="copyright-text">© 2025 HatchLab Innovations Pvt. Ltd.<br>All rights reserved.</p>
-    </div>
-    
-    <div class="footer-center-links">
-        <a href="https://www.hatchlabinnovations.com/career">Career</a>
-        <a href="https://www.hatchlabinnovations.com/contact">Contact</a>
-    </div>
 
-    <div class="footer-right-content">
-        <div class="contact-info">
-            <div class="contact-item phone-number">+91 8276057111</div>
-            <div class="contact-item email-address"><a href="mailto:info@hatchlabinnovations.com">info@hatchlabinnovations.com</a></div>
-            <div class="contact-item email-address"><a href="mailto:admin@hatchlabinnovations.com">admin@hatchlabinnovations.com</a></div>
+        <!-- Social icons – vertical & centered below the text -->
+        <div class="footer-social">
+            <p>Connect with us through -</p>
+            <div class="social-icons">
+                <a href="https://www.linkedin.com/company/hatchlab-innovations/posts/?feedView=all" target="_blank" aria-label="LinkedIn">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+                <a href="https://www.instagram.com/hatchlabinnovations.official/" target="_blank" aria-label="Instagram">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://www.facebook.com/people/Hatchlab-Innovations/61558095073459/" target="_blank" aria-label="Facebook">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+            </div>
         </div>
-        
-        <div class="email-subscription-mockup">
-            <input type="email" placeholder="Enter your email" class="email-input">
-            <button class="contact-us-btn">Contact Us</button>
-        </div>
-    </div>
-</footer>
+    </footer>
 
 <script src="https://www.hatchlabinnovations.com/assets/js/jquery-3.7.1.min.js"></script>
 <script src="https://www.hatchlabinnovations.com/assets/js/bootstrap.bundle.min.js"></script>
