--- a/careers_page.html
+++ b/careers_page.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Careers at Hatchlab</title>
   <link rel="stylesheet" href="styles_careers.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 
 <body>
@@ -53,6 +55,59 @@
       </a>
     </div>
   </div>
+  <footer class="footer-section">
+        <!-- Main horizontal row -->
+        <div class="footer-content">
+            <!-- Column 1: Logo + Copyright -->
+            <div class="footer-column">
+                <div class="footer-logo">
+                    <img src="images/logo.png" alt="HatchLab Logo">
+                </div>
+                <p class="footer-meta">© 2025 HatchLab Innovations Pvt. Ltd.<br>All rights reserved.</p>
+            </div>
+
+            <!-- Column 2: Links -->
+            <div class="footer-column">
+                <nav class="footer-links">
+                    <a href="https://www.hatchlabinnovations.com/career">Career</a>
+                    <a href="https://www.hatchlabinnovations.com/contact">Contact</a>
+                </nav>
+            </div>
+
+            <!-- Column 3: Contact Info -->
+            <div class="footer-column">
+                <div class="footer-contact">
+                    <a href="tel:+918276057111">+91 8276057111</a>
+                    <a href="mailto:info@hatchlabinnovations.com">info@hatchlabinnovations.com</a>
+                    <a href="mailto:admin@hatchlabinnovations.com">admin@hatchlabinnovations.com</a>
+                </div>
+            </div>
+
+            <!-- Column 4: Email Form -->
+            <div class="footer-column">
+                <form class="footer-form" action="#" onsubmit="return false;">
+                    <input type="email" placeholder="Enter your email" required>
+                    <button type="submit">Contact Us</button>
+                </form>
+            </div>
+        </div>
+
+        <!-- Social icons – vertical & centered below the text -->
+        <div class="footer-social">
+            <p>Connect with us through -</p>
+            <div class="social-icons">
+                <a href="https://www.linkedin.com/company/hatchlab-innovations/posts/?feedView=all" target="_blank" aria-label="LinkedIn">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+                <a href="https://www.instagram.com/hatchlabinnovations.official/" target="_blank" aria-label="Instagram">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://www.facebook.com/people/Hatchlab-Innovations/61558095073459/" target="_blank" aria-label="Facebook">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
