Fixed Logo Link

--- a/about.html
+++ b/about.html
@@ -151,7 +151,7 @@
     </nav>
     <header class="main-header">
         <div class="header-logo">
-            <a href="https://www.hatchlabinnovations.com/">
+            <a href="index_sample_1_fixed.html">
                  <img src="images/logo.png" alt="Logo" />
             </a>
            
