--- a/about.html
+++ b/about.html
@@ -183,6 +183,13 @@
 </div>
 
 <footer class="footer-section">
+  <!-- Yellow gradient blobs -->
+    <div class="footer-gradient">
+        <div></div>
+        <div></div>
+        <div></div>
+        
+    </div>
         <!-- Main horizontal row -->
         <div class="footer-content">
             <!-- Column 1: Logo + Copyright -->
