--- a/contactus.html
+++ b/contactus.html
@@ -37,7 +37,14 @@
             <a href="mailto:admin@hatchlabinnovations.com" class="email-item">admin@hatchlabinnovations.com</a>
         </div>
     </div>
-    <footer class="footer-section">
+   <footer class="footer-section">
+  <!-- Yellow gradient blobs -->
+    <div class="footer-gradient">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
         <!-- Main horizontal row -->
         <div class="footer-content">
             <!-- Column 1: Logo + Copyright -->
@@ -90,5 +97,6 @@
             </div>
         </div>
     </footer>
+
 </body>
 </html>
