--- a/services.html
+++ b/services.html
@@ -86,7 +86,14 @@ If you have bold ideas and a vision for transformation, connect with us, let’s
              </div>
             </div>
         </section>
-        <footer class="footer-section">
+         <footer class="footer-section">
+  <!-- Yellow gradient blobs -->
+    <div class="footer-gradient">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
         <!-- Main horizontal row -->
         <div class="footer-content">
             <!-- Column 1: Logo + Copyright -->
@@ -139,6 +146,7 @@ If you have bold ideas and a vision for transformation, connect with us, let’s
             </div>
         </div>
     </footer>
+
 
 </body>
 </html>
