--- a/careers_page.html
+++ b/careers_page.html
@@ -56,6 +56,13 @@
     </div>
   </div>
   <footer class="footer-section">
+  <!-- Yellow gradient blobs -->
+    <div class="footer-gradient">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
         <!-- Main horizontal row -->
         <div class="footer-content">
             <!-- Column 1: Logo + Copyright -->
@@ -108,6 +115,7 @@
             </div>
         </div>
     </footer>
+
 
 </body>
 </html>
