--- a/contactus.html
+++ b/contactus.html
@@ -18,7 +18,7 @@
             </div>
 
             <ul class="nav-links">
-                <li><a href="index_sample_1_fixed.html">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="services.html">Service</a></li>
                 <li><a href="careers_page.html">Career</a></li>
                 <li><a href="#contact">Contact</a></li>
