linking contact us

--- a/index_sample_1_fixed.html
+++ b/index_sample_1_fixed.html
@@ -251,7 +251,7 @@
           </div>
         </h1>
         <p>A synergy only Hatchlab makes possible.</p>
-        <a class="contact-btn" href="https://www.hatchlabinnovations.com/contact">Contact Us</a>
+        <a class="contact-btn" href="contactus.html">Contact Us</a>
       </div>
     </div>
   </div>
