--- a/index_sample_1_fixed.html
+++ b/index_sample_1_fixed.html
@@ -1480,7 +1480,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 
 
-  <!-- PARTICLES INIT -->
+  PARTICLES INIT
   <script>
     particlesJS("particles-js", {
       "particles": {
