--- a/careers_page.html
+++ b/careers_page.html
@@ -1,49 +1,251 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>Careers at Hatchlab</title>
-  <link rel="stylesheet" href="styles_careers.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="images/logo.png" rel="icon">
+    <title>Hatchlab Innovations</title>
 
-  <!-- PARTICLES.JS CDN -->
-  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <!-- Font Awesome (icons) -->
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+        integrity="sha512-KyZXEAg3QhqLMpG8r+Knujsl5+5hb7x1e6b7q3hS0Rr3y3+qY7V2Ld8K8xoVg6c3+X1V1j9a1Zl+9xqKZ0Xdw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <style>
-    /* Full-page background particles container */
-    #particles-bg {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -1;       /* Behind everything */
-      pointer-events: none;
-    }
-  </style>
+    <link rel="stylesheet" href="https://www.hatchlabinnovations.com/assets/css/bootstrap.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/owl.carousel@2.3.4/dist/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/owl.carousel@2.3.4/dist/assets/owl.theme.default.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link
+        rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css" />
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
+    <link rel="stylesheet" href="styles_careers.css">
+   
+    <style>
+      body {
+        cursor: none;
+        font-family: 'Lora', serif;
+      }
 
+      * {
+        font-family: 'Lora', serif;
+      }
+
+      @keyframes dropAndBounce {
+        0% {
+          opacity: 0;
+          transform: translateY(-100px);
+        }
+        60% {
+          opacity: 1;
+          transform: translateY(10px);
+        }
+        80% {
+          transform: translateY(-5px);
+        }
+        100% {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
+      @keyframes continuousBounce {
+        0%, 100% {
+          transform: translateY(0);
+        }
+        50% {
+          transform: translateY(-10px);
+        }
+      }
+
+      .word {
+        opacity: 0;
+        animation: dropAndBounce 0.8s ease-out forwards;
+      }
+
+      .word.bouncing {
+        animation: continuousBounce 2s ease-in-out infinite;
+        opacity: 1;
+      }
+
+      .word:nth-child(1) { animation-delay: 0s; }
+      .word:nth-child(2) { animation-delay: 0.1s; }
+      .word:nth-child(3) { animation-delay: 0.2s; }
+      .word:nth-child(4) { animation-delay: 0.3s; }
+      .word:nth-child(5) { animation-delay: 0.4s; }
+
+      .main-header {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        padding: 20px 80px;
+        background: rgba(23, 22, 31, 0.95);
+        backdrop-filter: blur(10px);
+        z-index: 1000;
+        border-bottom: 2px solid #fcd703;
+      }
+
+      .header-logo {
+        display: flex;
+        align-items: center;
+        gap: 15px;
+        margin-left:20px;
+      }
+
+      .header-logo img {
+        width: 50px;
+        height: auto;
+      }
+
+      .brand-name {
+        color: #fff;
+        font-size: 20px;
+        font-weight: 600;
+        letter-spacing: 0.5px;
+      }
+
+      .header-nav {
+        display: flex;
+        gap: 35px;
+        align-items: center;
+        margin-left: auto;
+      }
+
+      .header-nav a {
+        color: #fff;
+        text-decoration: none;
+        font-size: 16px;
+        transition: 0.3s;
+        font-weight: 500;
+      }
+
+      .header-nav a:hover {
+        color: #fcd703;
+      }
+
+      .connect-button {
+        padding: 8px 20px;
+        background: transparent;
+        border: 2px solid #fcd703;
+        color: #fcd703;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 16px;
+        font-weight: 600;
+        transition: 0.3s;
+      }
+
+      .connect-button:hover {
+        background: #fcd703;
+        color: #000;
+      }
+
+      .get-in-touch-btn {
+        padding: 12px 24px;
+        background: #fff;
+        border: none;
+        color: #000;
+        border-radius: 6px;
+        cursor: pointer;
+        font-size: 16px;
+        font-weight: bold;
+        transition: all 0.3s ease;
+        box-shadow: 0 0 20px rgba(252, 215, 3, 0.3);
+        position: relative;
+        overflow: hidden;
+      }
+
+      .get-in-touch-btn:hover {
+        background: #fcd703;
+        transform: scale(1.05);
+        box-shadow: 0 0 40px rgba(252, 215, 3, 0.8), 0 0 60px rgba(252, 215, 3, 0.6);
+      }
+
+      .contact-modal {
+        display: none;
+        position: fixed;
+        z-index: 10000;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.8);
+        align-items: center;
+        justify-content: center;
+      }
+
+      .contact-modal-content {
+        background: rgba(23, 22, 31, 0.95);
+        backdrop-filter: blur(10px);
+        padding: 40px;
+        border-radius: 10px;
+        border: 2px solid #fcd703;
+        max-width: 400px;
+        width: 90%;
+        text-align: center;
+      }
+
+      .contact-modal-content h3 {
+        color: #fcd703;
+        margin-bottom: 30px;
+        font-size: 24px;
+      }
+
+      .contact-info-item {
+        margin: 20px 0;
+      }
+
+      .contact-info-item a {
+        color: #fff;
+        text-decoration: none;
+        font-size: 18px;
+        transition: 0.3s;
+      }
+
+      .contact-info-item a:hover {
+        color: #fcd703;
+      }
+
+      .close-contact-modal {
+        color: #fff;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+        cursor: pointer;
+        line-height: 20px;
+      }
+
+      .close-contact-modal:hover {
+        color: #fcd703;
+      }
+    </style>
 </head>
+        
 
-<body>
-
-<!-- Background Particles -->
-<div id="particles-bg"></div>
-
-<header>
-    <nav class="navbar">
-        <div class="header-gradient">
-            <div></div><div></div><div></div><div></div>
+    <div class="glow-cursor"></div>
+    <header class="main-header">
+        <div class="header-logo">
+            <img src="images/logo.png" alt="Hatchlab Logo">
+            <span class="brand-name">Hatchlab Innovations</span>
         </div>
-        <ul class="nav-links">
-            <li><a href="about.html">About</a></li>
-            <li><a href="services.html">Service</a></li>
-            <li><a href="careers_page.html">Career</a></li>
-            <li><a href="contactus.html">Contact</a></li>
-            <button id="connectBtn" class="connect-button">Support</button>
-        </ul>
-    </nav>
-</header>
+        <nav class="header-nav">
+            <a href="about.html">About</a>
+            <a href="services.html">Service</a>
+            <a href="careers_page.html">Career</a>
+            <a href="contactus.html">Contact</a>
+            <button class="get-in-touch-btn" id="getInTouchBtn">Get In Touch</button>
+        </nav>
+    </header>
 
 <div class="content">
     <h1>Careers at Hatchlab</h1>
@@ -120,19 +322,6 @@
     </div>
 </footer>
 
-<!-- LEFT SIDEBAR -->
-<aside class="left-sidebar">
-    <div class="sidebar-logo">
-        <a href="index_sample_1_fixed.html"><img src="images/logo.png" alt="HatchLab Logo"></a>
-    </div>
-    <div class="sidebar-text">Hatchlab Innovations</div>
-
-    <div class="sidebar-social">
-        <a href="https://www.linkedin.com/company/hatchlab-innovations/posts/?feedView=all" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-        <a href="https://www.instagram.com/hatchlabinnovations.official/" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.facebook.com/people/Hatchlab-Innovations/61558095073459/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-    </div>
-</aside>
 
 <!-- MODAL -->
 <div id="connectModal" class="custom-modal">
